--- a/hardskills/modulohtml/aula14/styles/styleBlue.css
+++ b/hardskills/modulohtml/aula14/styles/styleBlue.css
@@ -10,3 +10,22 @@ main { background-color:darkcyan; }
 .documento__conteudo {background-color:aliceblue;}
 .documento__conteudo__ferramentas {background-color:cadetblue}
 .documento__conteudo__edicao {background-color:gainsboro}
+.menu__modalbox 
+{
+    background-color:cadetblue;
+}
+.menu__modalbox__ferramenta 
+{
+    color:midnightblue;
+}
+.menu__modalbox__ferramenta:hover 
+{
+    background-color:darkblue; 
+    color: white; 
+}
+td > div {
+
+}
+td > div > img { 
+
+}
