--- a/hardskills/modulohtml/aula14/styles/styleGreen.css
+++ b/hardskills/modulohtml/aula14/styles/styleGreen.css
@@ -1,12 +1,30 @@
-header {background-color:darkgreen; color: white;}
-.arquivo {color:yellowgreen}
-.menu {background-color:darkolivegreen;}
+header {background-color:#1a2d06; color: white;}
+.arquivo {color:#20df50}
+.menu {background-color:#99e54d;}
 /*.menu__ferramenta {}*/
-.menu__ferramenta:hover {background-color:palegreen; color: black; }
-main { background-color:olivedrab; }
-.documento__aba {background-color:darkolivegreen; border-style: solid;}
-.documento__ferramenta {color:lightgreen;}
-.documento__ferramenta:hover {background-color:palegreen; color: black; user-select: none;}
+.menu__ferramenta:hover {background-color:#20df50; color: black; }
+main { background-color:#b3ec79; }
+.documento__aba {background-color:#99e54d; border-style: solid;}
+.documento__ferramenta {color:black;}
+.documento__ferramenta:hover {background-color:#20df50; color: black; user-select: none;}
 .documento__conteudo {background-color:aliceblue;}
-.documento__conteudo__ferramentas {background-color:darkolivegreen}
-.documento__conteudo__edicao {background-color:gainsboro}
+.documento__conteudo__ferramentas {background-color:#99e54d}
+.documento__conteudo__edicao {background-color:#ccf2a6}
+.menu__modalbox {
+    background-color:#99e54d;
+}
+.menu__modalbox__ferramenta 
+{
+    color:white;
+}
+.menu__modalbox__ferramenta:hover 
+{
+    background-color:#20df50; 
+    color: white; 
+}
+td > div {
+
+}
+td > div > img { 
+
+}
