--- a/hardskills/modulohtml/aula21/exercicio0/styles/main.css
+++ b/hardskills/modulohtml/aula21/exercicio0/styles/main.css
@@ -7,17 +7,8 @@
 }
 
 html{
-    font-size: 10px;
-    --cinza: lightgray;
-    --preto: black;
-    --cor1: hsl(0, 58%, 55%);
-    --cor2: rgb(74, 207, 189);
-    --cor3: #884acf;
-    --cor1t: hsla(0, 58%, 55%, 0.452);
-    --cor2t: rgba(74, 207, 189, 0.486);
-    --cor3t: #884acf6b;
-    --gradient1: -webkit-linear-gradient(var(--cor2), var(--cor2t), var(--cor2));
 }
+
 body {
     font-family: 'kenney_future_narrowregular';
     margin: 0px;
@@ -108,4 +99,9 @@ ul > li
     background-position: 2rem 2rem;
     background-size: 5rem 5rem;
     background-repeat: no-repeat;
+}
+
+iframe {
+    display: flex;
+    flex-grow: 1;
 }
