--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -41,7 +41,7 @@ main {
     
 }
 
-main > article > div {
+#subpage > div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -49,11 +49,12 @@ main > article > div {
     align-items: center;
     justify-content: right;
     background-image: url("../images/luisformal.png");
-    background-repeat: no-repeat;
-    background-size: contain;
+    background-repeat: repeat;
+    background-size:cover;
+    min-height: max-content;
 }
 
-main > article > div > div {
+#subpage > div > div {
     display: flex;
     flex-direction: column;
     flex-shrink: 1;
@@ -61,18 +62,18 @@ main > article > div > div {
     flex-wrap: wrap;
     text-align: center;
     padding: 10px;
-    justify-content: center;
-    max-width:600px;
+    justify-content: right;
+    max-width: min-content;
 }
 
-main > article > div > div > div {
+#subpage > div > div > div {
     display: block;
     flex-direction: column;
-    justify-content: center;
+    justify-content: right;
     flex-wrap: wrap;
 }
 
-main > article > div > div > div > div {
+#subpage > div > div > div > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -81,11 +82,15 @@ main > article > div > div > div > div {
 
 ul {
     text-align: left;
+    min-width:max-content;
 }
+
+#subpage > div > nav
 
 table {
     margin: 0px;
-    justify-self:center;
+    justify-self:stretch;
+    min-width:max-content;
 }
 
 div > span {
@@ -97,6 +102,7 @@ div > span {
 
 td {
     text-align:center;
+    width: max-content;
 }
 
 td > img {
