--- a/hardskills/modulohtml/aula23/styles/style1.css
+++ b/hardskills/modulohtml/aula23/styles/style1.css
@@ -10,61 +10,115 @@
     --cinza: lightgray;
     --preto: hsl(80, 50%, 5%);;
 
-    --cor1a1: hsl(20, 30%, 40%);
-    --cor1a2: hsl(80, 30%, 40%);
-    --cor1a3: hsl(140, 30%, 40%);
+    --cor1a1: hsl(5, 100%, 50%);
+    --cor1a2: hsl(80, 100%, 50%);
+    --cor1a3: hsl(155, 100%, 50%);
 
-    --cor1b1: hsl(200, 80%, 80%);
-    --cor1b2: hsl(260, 80%, 80%);
-    --cor1b3: hsl(320, 80%, 80%);
+    --cor1b1: hsl(200, 40%, 80%);
+    --cor1b2: hsl(260, 40%, 80%);
+    --cor1b3: hsl(320, 40%, 80%);
     
-    --gradient1: -webkit-linear-gradient(var(--cor1a1), var(--cor1a2), var(--cor1a3));
+    --cor1b1a: hsla(200, 40%, 80%, .4);
+    --cor1b2a: hsla(260, 40%, 80%, .4);
+    --cor1b3a: hsla(320, 40%, 80%, .4);
+    
+    --gradient1: linear-gradient(90deg, var(--cor1b1a) 0%, var(--cor1b2a) 50%, var(--cor1b3a) 100%);
     --mainFont: 'kenney_future_narrowregular';
-    
-    font-family: var(--mainFont, Arial, Helvetica, sans-serif);
+}
+
+@keyframes --titleblink {
+    0% {
+        color: var(--cor1a1);
+    }
+    50% {
+        color: var(--cor1a1);
+    }
+    55% {
+        color: var(--preto);
+    }
+    60% {
+        color: var(--cor1a1);
+    }
+    100% {
+        color: var(--cor1a1);
+    }
+}
+
+@keyframes --h4ablink {
+    0% {
+        color: var(--cor1a3);
+    }
+    48% {
+        color: var(--cor1a3);
+    }
+    49% {
+        color: var(--preto);
+    }
+    52% {
+        color: var(--cor1a3);
+    }
+    53% {
+        color: var(--cor1a3);
+    }
+    54% {
+        color: var(--preto);
+    }
+    60% {
+        color: var(--cor1a3);
+    }
+    70% {
+        color: var(--cor1a3);
+    }
+    72% {
+        color: var(--preto);
+    }
+    100% {
+        color: var(--cor1a3);
+    }
 }
 
 body > header > div > h1
 {
-    color:var(--cor1b1)
+    color:var(--cor1a1);
+    animation: --titleblink 5s infinite;
 }
 
 
 body > header > div > h4 :first-child
 {
-    color:var(--cor1b2)
+    color:var(--cor1a2);
+    animation: --h4ablink 5s infinite;
 }
 
 body > header > div > h4 :last-child
 {
-    color:var(--cor1b3)
+    color:var(--cor1a3);
+    animation: --h4ablink 5s infinite reverse;
 }
 
 body {
     /*background:fixed var(--gradient1);*/
     background-color: var(--cor1b1);
-    color:var(--cinza);
+    color:var(--preto);
 }
 
 body > header {
-    background-color: var(--cor1a3);
-    
+    background-color: var(--preto);
+    font-family: var(--mainFont, Arial, Helvetica, sans-serif);
 }
 
-body > header > nav > button 
+#menu > button
 {
-    background-color: var(--cor1b1);
-    border-color: var(--cor1a1);
+    font-family: var(--mainFont, Arial, Helvetica, sans-serif);
+    background-color: var(--cor1b2);
+    border-color: var(--cor1a3);
+    border-radius: 15px;
     color: var(--preto);
 }
 
-body > header > nav > button:hover
+#menu > button:hover
 {
     border-color: var(--cor1b3);
-}
-
-body > main {
-    background-color: var(--cor1a2);
 }
 
 body > footer {
@@ -73,32 +127,31 @@ body > footer {
 
 strong
 {
-    color: var(--cor1b1);
-    text-shadow: var(--preto) 1px 1px 10px;
+    color: var(--cor1a2);
+    text-shadow: var(--preto) 1px 1px 1px;
 }
 
 i
 {
-    color: var(--cor1b3);
-    text-shadow: var(--preto) 1px 1px 10px;
+    color: var(--cor1a3);
+    text-shadow: var(--preto) 1px 1px 1px;
+}
+
+#subpage {
+    background-color: var(--cor1b2);
+}
+
+#subpage > div > div {
+    background:fixed var(--gradient1);
+    
+    min-width: 400px;
 }
 
 
-body > main > article > div > div {
-    background-color: var(--cor1a2);
-}
-
-
-main > article > div > div > div > h2 {
-    color: var(--cor1b3);
-    text-shadow: var(--preto) 1px 1px 10px;
-}
-
-td:nth-child(2n+1) {
-    color: var(--cor1b1);
-}
-td:nth-child(2n) {
-    color: var(--cor1b3);
+#subpage h2 {
+    color: var(--cor1a3);
+    text-shadow: var(--preto) 1px 1px 1px;
+    width: max-content;
 }
 
 .skills-header {
@@ -108,10 +161,10 @@ td:nth-child(2n) {
 }
 
 .skills-header > td {
-    display: block;
+    display: flex;
     text-align: center;
-    width: fit-content;
-    color: var(--cinza);
+    color: var(--cor1a2);
+    text-shadow: var(--preto) 1px 1px 1px;
 }
 
 #skillhtml > td > img:nth-last-child(-n + 1)
