--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -6,9 +6,11 @@ body > header {
     display: flex;
     user-select: none;
     text-align:center;
+    flex-wrap:wrap;
     padding: 20px 20px 0px 20px;
     white-space: nowrap;
-    justify-content:space-between;
+    justify-content:center;
+    align-items: center;
 }
 
 h1 {
@@ -24,7 +26,7 @@ body > header > nav
     display: flex;
     flex-wrap: wrap;
     align-content: flex-end;
-    justify-content: flex-end;
+    justify-content: center;
     flex-grow: 1;
 }
 
