--- a/hardskills/modulohtml/aula23/styles/style1.css
+++ b/hardskills/modulohtml/aula23/styles/style1.css
@@ -24,20 +24,37 @@
     
     --gradient1: linear-gradient(90deg, var(--cor1b1a) 0%, var(--cor1b2a) 50%, var(--cor1b3a) 100%);
     --mainFont: 'kenney_future_narrowregular';
+
+    
 }
 
 @keyframes --titleblink {
     0% {
         color: var(--cor1a1);
     }
-    50% {
+    30% {
+        color:white;
+    }
+    30.1% {
+        color: var(--preto);
+    }
+    40% {
         color: var(--cor1a1);
     }
-    55% {
+    40.1% {
         color: var(--preto);
+    }
+    45% {
+        color: var(--cor1a1);
+    }
+    45.1% {
+        color: var(--preto);
+        filter: blur(100%);
     }
     60% {
         color: var(--cor1a1);
+        filter: blur(0%);
+        
     }
     100% {
         color: var(--cor1a1);
@@ -46,54 +63,34 @@
 
 @keyframes --h4ablink {
     0% {
-        color: var(--cor1a3);
+        color: var(--cor1a2);
     }
-    48% {
-        color: var(--cor1a3);
+    30% {
+        color:white;
     }
-    49% {
+    30.1% {
         color: var(--preto);
     }
-    52% {
-        color: var(--cor1a3);
-    }
-    53% {
-        color: var(--cor1a3);
-    }
-    54% {
-        color: var(--preto);
-    }
-    60% {
-        color: var(--cor1a3);
-    }
-    70% {
-        color: var(--cor1a3);
-    }
-    72% {
-        color: var(--preto);
+    40% {
+        color: var(--cor1a2);
     }
     100% {
-        color: var(--cor1a3);
+        color: var(--cor1a2);
     }
 }
 
-body > header > div > h1
-{
-    color:var(--cor1a1);
-    animation: --titleblink 5s infinite;
+body > header > div > h1{
+    animation: --titleblink 15s infinite;
 }
 
 
-body > header > div > h4 :first-child
-{
-    color:var(--cor1a2);
-    animation: --h4ablink 5s infinite;
+body > header > div > h4 :first-child{
+    animation: --h4ablink 15s infinite;
 }
 
-body > header > div > h4 :last-child
-{
+body > header > div > h4 :last-child{
     color:var(--cor1a3);
-    animation: --h4ablink 5s infinite reverse;
+    animation: --h4ablink 15s infinite;
 }
 
 body {
@@ -105,10 +102,10 @@ body {
 body > header {
     background-color: var(--preto);
     font-family: var(--mainFont, Arial, Helvetica, sans-serif);
+    color: var(--cinza);
 }
 
-#menu > button
-{
+#menu > button{
     font-family: var(--mainFont, Arial, Helvetica, sans-serif);
     background-color: var(--cor1b2);
     border-color: var(--cor1a3);
@@ -116,8 +113,7 @@ body > header {
     color: var(--preto);
 }
 
-#menu > button:hover
-{
+#menu > button:hover{
     border-color: var(--cor1b3);
 }
 
@@ -125,14 +121,12 @@ body > footer {
     background-color: var(--cor1a3);
 }
 
-strong
-{
+strong{
     color: var(--cor1a2);
     text-shadow: var(--preto) 1px 1px 1px;
 }
 
-i
-{
+i{
     color: var(--cor1a3);
     text-shadow: var(--preto) 1px 1px 1px;
 }
@@ -143,10 +137,8 @@ i
 
 #subpage > div > div {
     background:fixed var(--gradient1);
-    
     min-width: 400px;
 }
-
 
 #subpage h2 {
     color: var(--cor1a3);
@@ -167,8 +159,7 @@ i
     text-shadow: var(--preto) 1px 1px 1px;
 }
 
-#skillhtml > td > img:nth-last-child(-n + 1)
-{
+#skillhtml > td > img:nth-last-child(-n + 1){
     filter: grayscale(100%);
 }
 
