--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -4,10 +4,10 @@ body {
 
 body > header {
     display: flex;
+    flex-direction: column;
     user-select: none;
-    text-align:center;
-    flex-wrap:wrap;
-    padding: 20px 20px 0px 20px;
+    text-align:stretch;
+    padding: 10px 10px 10px 10px;
     white-space: nowrap;
     justify-content:center;
     align-items: center;
@@ -18,29 +18,66 @@ h1 {
 }
 
 h4 {
-    margin: 0px 0px 10px 0px;
+    margin: 0px 0px 0px 0px;
 }
 
-body > header > nav 
-{
+header h2 {
+    margin: 0px 0px 0px 0px;
+}
+
+
+body > header > div {
+    display: flex;
+    user-select: none;
+    text-align:center;
+    align-items: center;
+    max-height: fit-content;
+    border-radius: 15px;
+    padding: 15px 15px 0px 15px;
+}
+
+body > header > div > div {
+    display: flex;
+    flex-direction: column;
+    height: min-content;
+    padding: 5px;
+    
+    border: 3px solid white;
+}
+
+body > header > div > img {
+    display: flex;
+    max-height: min-content;
+    object-fit: contain;
+    max-height: 200px;
+}
+
+#menu {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-end;
-    justify-content: center;
-    flex-grow: 1;
+    justify-content: stretch;
 }
 
-body > header > nav > button 
-{
+#menu button {
+    display: flex;
     font-size: 24px;
     border: 3px solid black;
     margin: 1px;
     padding: 10px;
+    flex-grow: 1;
 }
 
 main {
-    margin: 0% 5% 0% 5%;
+    display: flex;
+    padding: 5% 5% 5% 5%;
+    justify-content: center;
+    align-items: center;    
+}
+
+#subpage {
     
+    max-width: fit-content;
 }
 
 #subpage > div {
@@ -50,10 +87,6 @@ main {
     text-align: center;
     align-items: center;
     justify-content: right;
-    background-image: url("../images/luisformal.png");
-    background-repeat: repeat;
-    background-size:cover;
-    min-height: max-content;
 }
 
 #subpage > div > div {
@@ -65,13 +98,12 @@ main {
     text-align: center;
     padding: 10px;
     justify-content: right;
-    max-width: min-content;
 }
 
 #subpage > div > div > div {
-    display: block;
+    display: flex;
     flex-direction: column;
-    justify-content: right;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -79,17 +111,20 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
+    align-items: center;
     flex-wrap: wrap;
 }
 
 ul {
     text-align: left;
-    min-width:max-content;
+    max-width:max-content;
+    align-self: center;
+    margin: 5px;
 }
 
-#subpage > div > nav
-
 table {
+    
     margin: 0px;
     justify-self:stretch;
     min-width:max-content;
