--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -107,6 +107,18 @@ main {
     flex-wrap: wrap;
 }
 
+.list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    margin: auto;
+}
+
+.list * {
+    width:fit-content;
+}
+
 #subpage > div > div > div > div {
     display: flex;
     flex-direction: column;
