--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -117,27 +117,17 @@ main {
 
 .list * {
     width:fit-content;
+    margin: auto;
 }
 
-#subpage > div > div > div > div {
-    display: flex;
+.grade {
+    /*display: flex;
     flex-direction: column;
-    justify-content: center;
-    
+    justify-content: center;*/
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     align-items: center;
     flex-wrap: wrap;
-}
-
-ul {
-    text-align: left;
-    align-self: center;
-    margin: 5px;
-}
-
-table {
-    display: flex;
-    margin: 0px;
-    justify-self:center;
 }
 
 div > span {
@@ -147,20 +137,21 @@ div > span {
     flex-wrap: wrap;
 }
 
-td {
-    text-align:center;
-    width: max-content;
-}
-
-td > img {
-    width: 30px;
-}
-
 footer {
     padding: 5px;
     text-align: center;
 }
 
-a > img {
-    max-width: 50px;
+a img {
+    width: 40px;
+}
+
+.list > span > img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
+
+.list > span > span > img {
+    width: 40px;
 }
