--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -7,7 +7,7 @@ body > header {
     flex-direction: column;
     user-select: none;
     text-align:stretch;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 0px 10px;
     white-space: nowrap;
     justify-content:center;
     align-items: center;
@@ -104,7 +104,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
 }
 
 .list {
@@ -115,8 +115,8 @@ main {
     margin: auto;
 }
 
-.list * {
-    width:fit-content;
+.list > * {
+    width: fit-content;
     margin: auto;
 }
 
@@ -124,10 +124,22 @@ main {
     /*display: flex;
     flex-direction: column;
     justify-content: center;*/
-    display: grid;
+    display: flex;
     grid-template-rows: 1fr 1fr;
     align-items: center;
+    align-self: center;
     flex-wrap: wrap;
+}
+
+
+.grade > span {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.grade > span > * {
+    padding: 20px;
 }
 
 div > span {
@@ -146,12 +158,29 @@ a img {
     width: 40px;
 }
 
-.list > span > img {
+.text-icon
+{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-icon > img
+{
+    width: 35px;
+    height: 35px;
+    margin: 5px;
+}
+
+span > img {
     width: 50px;
     height: 50px;
     object-fit: contain;
 }
 
-.list > span > span > img {
-    width: 40px;
+.skills-header {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
 }
