--- a/hardskills/modulohtml/aula23/styles/style1.css
+++ b/hardskills/modulohtml/aula23/styles/style1.css
@@ -217,6 +217,7 @@ footer {
     background-color: var(--pretot);
     padding: 5px;
     margin: 5px;
+    white-space: nowrap;
 }
 
 .list > span > span {
