--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -8,21 +8,20 @@ body > header {
     user-select: none;
     text-align:stretch;
     padding: 10px 10px 0px 10px;
-    white-space: nowrap;
     justify-content:center;
     align-items: center;
 }
 
 h1 {
-    margin: 0px;
+    margin: 15px 15px 15px 15px;
 }
 
 h4 {
-    margin: 0px 0px 0px 0px;
+    margin: 5px 5px 5px 5px;
 }
 
 header h2 {
-    margin: 0px 0px 0px 0px;
+    margin: 10px 10px 10px 10px;
 }
 
 
@@ -39,9 +38,8 @@ body > header > div {
 body > header > div > div {
     display: flex;
     flex-direction: column;
-    height: min-content;
+    height: max-content;
     padding: 5px;
-    
     border: 3px solid white;
 }
 
@@ -49,12 +47,13 @@ body > header > div > img {
     display: flex;
     max-height: min-content;
     object-fit: contain;
-    max-height: 200px;
+    max-height: 300px;
 }
 
 #menu {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap:nowrap;
     align-content: flex-end;
     justify-content: stretch;
 }
@@ -94,7 +93,6 @@ main {
     flex-direction: column;
     flex-shrink: 1;
     flex-grow: 1;
-    flex-wrap: wrap;
     text-align: center;
     padding: 10px;
     justify-content: right;
@@ -110,14 +108,22 @@ main {
 .list {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-items: stretch;
+    align-content: stretch;
     text-align: left;
-    margin: auto;
+    flex-grow: 1;
 }
 
-.list > * {
-    width: fit-content;
+.item {
+    display: flex;
+    /*width: fit-content;*/
     margin: auto;
+    justify-content: space-between;
+}
+
+.item > span:last-child {
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .grade {
@@ -125,7 +131,6 @@ main {
     flex-direction: column;
     justify-content: center;*/
     display: flex;
-    grid-template-rows: 1fr 1fr;
     align-items: center;
     align-self: center;
     flex-wrap: wrap;
@@ -143,10 +148,10 @@ main {
 }
 
 div > span {
-    display: block;
-    flex-direction: column;
-
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 footer {
