--- a/hardskills/modulohtml/aula23/styles/layout.css
+++ b/hardskills/modulohtml/aula23/styles/layout.css
@@ -148,7 +148,8 @@ main {
     flex-direction: column;
     justify-content: center;*/
     display: flex;
-    align-items: center;
+    align-items: stretch;
+    justify-content: stretch;
     align-self: center;
     flex-wrap: wrap;
 }
@@ -157,10 +158,17 @@ main {
 .grade > span {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
+    justify-content: stretch;
+    width: 100%;
 }
 
 .grade > span > * {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    width: 100%;
     padding: 20px;
 }
 
