--- a/hardskills/modulohtml/aula23/styles/style2.css
+++ b/hardskills/modulohtml/aula23/styles/style2.css
@@ -141,8 +141,7 @@ body > header h4{
 }
 body > header > div {
     background:fixed var(--gradient1);
-    border: 3px solid black;
-    border-radius: 5px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 body > header h4 :first-child{
