--- a/hardskills/modulohtml/aula24/styles/layout.css
+++ b/hardskills/modulohtml/aula24/styles/layout.css
@@ -4,7 +4,8 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -16,72 +17,196 @@ header > span {
 }
 
 #photo {
-    width: 40%;
+    width: 20vw;
+    height: 20vw;
+    border-radius: 50%;
+    padding: 3%;
+    overflow: hidden;
+    background-color: var(--cor1b2);
+}
+
+#photo > img {
+    object-fit:contain;
+    width: 200%;
+    height: 200%;
+    position: relative;
+    top: -50px;
+    left: -10px;
 }
 
 #titlebox {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: stretch;
     text-align: center;
     flex-grow: 1;
     padding: 10px;
 }
 
-#refs img {
-    width: 40px;
+#titlebox > span {
+    display: flex;
+    flex-direction: row;
+    color: white;
 }
 
-main {
+#titlebox > span > * {
+    padding: 20px;
+}
 
+#refs{
+    height: 60px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#refs a {
+    width: 40px;
+    height: 40px;
+}
+
+#refs img {
+    width: 100%;
+}
+
+#refs a:hover {
+    width: 60px;
+    height: 60px;
+    
+}
+
+main h2 {
+    text-align: center;
 }
 
 #subpage {
     display: flex;
     flex-direction: row;
     justify-content: stretch;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
-#incial {
+#subpage > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    flex-wrap: nowrap;
+}
+
+#subpage > div > * {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    flex-wrap: nowrap;
+    
     margin: 10px;
     padding: 20px;
     background-color: var(--cinzat);
     border-radius: 15px;
-    width: 50%;
+}
+
+/*#incial {
+    
+   
+    max-width: 70%;
+}*/
+
+.grade {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: space-between;
+    align-self: center;
+    padding: 10px;
+    width: 100%;
+}
+
+.grade > section {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: stretch;
+    padding: 10px;
+}
+
+.grade > section > * {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    padding: 10px;
+    
+    width: 100%;
+}
+
+.grade > section > * {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    padding: 10px;
+    
+    width: 100%;
 }
 
 #repositorio {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    padding: 20px;
-    background-color: var(--cinzat);
+    
     border-radius: 15px;
     flex-grow: 1;
+}
+
+#repositorio > div {
+    
+    padding: 20px;
+}
+
+#repositorio > div > span:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 20px;
+    border-radius: 15px;
+    flex-grow: 1;
+}
+
+#repositorio a {
+    color: var(--cor1b2);
+    font-size:large;
+    font-weight:bolder;
+}
+
+#repositorio a:visited {
+    color: var(--cor1b1);
+}
+
+#repositorio a:hover {
+    color: var(--cor1a2);
 }
 
 #repositorio img {
     width: 60px;
 }
 
-.grade {
+#repositorio > div > span > span {
     display: flex;
     flex-direction: row;
-    align-items: space-between;
-    justify-content: space-between;
-    align-self: center;
-    flex-wrap: wrap;
-    padding: 10px;
-    width: 30%;
+    justify-content: center;
+    align-items: center;
 }
 
-.grade > * {
+.text-icon {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    justify-content: stretch;
-    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     padding: 10px;
 }
 
@@ -125,4 +250,8 @@ main {
 footer {
     text-align: center;
     padding: 10px;
+}
+
+img {    
+    pointer-events: none;
 }
