--- a/hardskills/modulohtml/aula25/styles/style.css
+++ b/hardskills/modulohtml/aula25/styles/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-@import url('https://fonts.gstatic.com/s/anton/v11/1Ptgg87LROyAm3Kz-C8CSKlv.woff2');
+/*@import url('https://fonts.gstatic.com/s/anton/v11/1Ptgg87LROyAm3Kz-C8CSKlv.woff2');*/
 
 :root{
+    --color_0a: rgba(255,255,255, 0);
     --color_0: rgb(255,255,255);
     --color_27: rgb(141,216,216);
     --color_1: rgb(255,255,255);
@@ -11,14 +12,13 @@
     --color_5: rgb(255,203,5);
     --color_6: rgb(114,114,114);
     --color_7: rgb(176,176,176);
-    --color_8: rgb(255,255,255);
     --color_9: rgb(114,114,114);
     --color_10: rgb(176,176,176);
-    --color_11: rgb(255,255,255);
     --color_12: rgb(250,250,250);
     --color_13: rgb(166,162,162);
     --color_14: rgb(46,45,45);
     --color_15: rgb(24,24,24);
+    --color_15a: rgba(24,24,24, 0);
     --color_16: rgb(180,180,230);
     --color_17: rgb(138,139,204);
     --color_18: rgb(62,64,179);
@@ -36,7 +36,8 @@
     --color_33: rgb(253,190,52);
     --color_34: rgb(169,127,35);
     --color_35: rgb(84,63,17);
-    --buttoncolor: var(--color_8);
+    --buttoncolor: var(--color_0);
+    --buttoncoloralpha: var(--color_0a);
     --buttonglow: var(--color_15);
     --font_0: 'Anton', sans-serif;
     --font_8: 'rawetc', sans-serif;
@@ -58,8 +59,8 @@ body {
 }
 
 #flutuante{
-    
-    background-color: var(--color_8);
+    z-index: 2;
+    background-color: var(--color_0);
     display: flex;
     flex-direction: column;
     position:sticky;
@@ -170,7 +171,7 @@ main {
     background-color: rgba(0, 0, 0, 0.15);
     justify-content: center;
     align-items: center;
-    color: var(--color_8);
+    color: var(--color_0);
 }
 
 #logophoto > div > div {
@@ -199,6 +200,23 @@ main {
     padding-bottom: 35px;
 }
 
+@keyframes --botaofill {
+    0% {
+        background-color: var(--buttoncoloralpha);
+    }
+    100% {
+        background-color: var(--buttoncolor);
+    }
+}
+@keyframes --botaofillreverse {
+    0% {
+        background-color: var(--buttoncolor);
+    }
+    100% {
+        background-color: var(--buttoncoloralpha);
+    }
+}
+
 .botao {
     margin: 0px;
     padding: 8px 25px 8px 25px ;
@@ -209,11 +227,13 @@ main {
     border: 1px solid var(--buttoncolor);
     color: var(--buttoncolor);
     cursor: pointer;
+    animation: --botaofillreverse 1s;
 }
 
 .botao:hover {
     color:var(--buttonglow);
     background-color: var(--buttoncolor);
+    animation: --botaofill 1s;
 }
 
 #mostruario {
@@ -239,7 +259,8 @@ main {
     margin-bottom: 60px;
     flex-grow: 1;
     --buttoncolor: var(--color_15);
-    --buttonglow: var(--color_8);
+    --buttoncoloralpha: var(--color_15a);
+    --buttonglow: var(--color_0);
     justify-content:center;
 }
 
@@ -372,23 +393,143 @@ main {
     font-size: 25px;
 }
 
-#social > div {
-    background-color: var(--color_8);
-    height: 561px;
+#social > ul {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--color_0);
+    list-style-type: none;
+    padding: 0px;
+}
+
+.grade {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 0px;
+    row-gap: 0px;
+    column-gap: 0px;
+    justify-content: stretch;
+}
+
+#grade1 :nth-child(4) {
+    grid-row: span 2;
+    grid-column: span 2;
+}
+
+#grade2 :nth-child(1) {
+    grid-row: span 2;
+    grid-column: span 2;
+}
+
+.photo {
+    margin: 0px;
+}
+
+.photo img {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: fit-content;
+    object-fit: cover;
+}
+
+.photo > div {
+    
+    align-items: stretch;
+    justify-content: stretch;
+    width: 100%;
+    height: 100%;
+    position:relative;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.photo > div > div {
+    display: none;
+    flex-grow: 1;
+    background-color: rgba(0,0,0, .5);
+    text-justify: distribute;
+    z-index: 1;
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    top: 0px;
+    left: 0px;
+    user-select: none;
+}
+
+
+.photo:hover > div > div {
+    display: flex;
+}
+
+.photo h5 {
+    color: var(--color_0);
+    font-family: "HelveticaNeueW01-45Ligh", "HelveticaNeueW02-45Ligh", "HelveticaNeueW10-45Ligh", sans-serif;
+    width: fit-content;
+    height: min-content;
+    text-align: center;
+    padding: 32px;
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
     background-color: var(--color_15);
+    font-family: var(--font_8);
 }
 
-footer > div {
-    height: 150px;
+/*footer > div {
+    height: 200px;
     
     margin: 62px 0px 64px 0px;
+}*/
+
+#submenu {
+    display: flex;
+    color: var(--color_0);
+    margin: 62px calc((100% - 1050px) * 0.5) 64px calc((100% - 1050px) * 0.5);
+    flex-grow: 1;
+    justify-content: space-between;
 }
 
-footer > section {
+#submenu nav {
+    display: flex;
+}
+
+#submenu ul {
+    list-style: none;
+    padding: 0px;
+}
+
+#submenu ul li {
+    padding: 3px 0px 3px 40px;
+}
+
+#submenu a {
+    letter-spacing: -0.03em;
+    font-size: 15px;
+    font-weight: lighter;
+    cursor: pointer;
+}
+
+#endfooter {
+    display: flex;
     height: 83px;
-    
+    justify-content: start;
+    align-items: center;
     background-color: var(--color_14);
+}
+
+footer h6 {
+    margin: 18px 0px 23px calc((100% - 980px) * 0.5);
+    letter-spacing: -0.03em;
+    font-size: 12px;
+    width: fit-content;
+    height: fit-content;
+    color: var(--color_13);
+    font-weight: lighter;
 }
