--- a/hardskills/modulohtml/lojapet/styles/palleta.css
+++ b/hardskills/modulohtml/lojapet/styles/palleta.css
@@ -33,6 +33,7 @@
     --color_34: 55,82,29;
     --color_35: 44,64,23;
 
+    --fnt: normal normal normal 14px/1.4em avenir-lt-w01_85-heavy1475544,sans-serif;
     --font_0: normal normal normal 56px/1.4em poppins-semibold,poppins,sans-serif;
     --font_1: normal normal normal 16px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;
     --font_2: normal normal normal 47px/1.4em avenir-lt-w01_85-heavy1475544,sans-serif;
