--- a/hardskills/modulohtml/lojapet/styles/style.css
+++ b/hardskills/modulohtml/lojapet/styles/style.css
@@ -3,6 +3,12 @@ body {
     font-size: 10px;
 }
 
+#topbar {
+    position:sticky;
+    top:0px;
+    background-color:rgb(var(--branco));
+}
+
 .topsection {
     display:flex;
     flex-direction: row;
@@ -145,6 +151,18 @@ header h3 {
     overflow: hidden;
 }
 
+#search:hover {
+    
+    background-color: rgb(var(--white));
+    border: 1px solid black;
+}
+
+#search:has(input:focus) {
+    
+    background-color: rgb(var(--white));
+    border: 1px solid black;
+}
+
 #search > input {
     /*width: 100%;*/
     background-color: unset;
@@ -156,27 +174,304 @@ header h3 {
     outline: none;
 }
  
-#search > div {
+#search > button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 56px;
     height: 40px;
     background-color: rgb(var(--color_18));
+    border: none;
  }
 
-#search button {
+#search > button div {
+    height: 15px;
+    width: 15px;
     background-color: rgb(var(--branco));
     -webkit-mask: url(../images/svgs/search.svg) no-repeat center;
     mask: url(../images/svgs/search.svg) no-repeat center;
-    mask-clip: contain;
     mask-size: 100%;
     -webkit-mask-size: 100%;
  }
 
 #phone {
     display:flex;
+    flex-direction: column;
     flex-grow: 1;
     border-bottom: 1.5px solid rgb(var(--color_13));
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     width: 191px;
     height: 93px;
     background-color: rgb(var(--color_18));
+    color: rgb(var(--branco));
+}
+
+#phone > h4 {
+    font: var(--font_6);
+    margin: 0px;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+
+#phone > h5 {
+    font: var(--font_7);
+    margin: 0px;
+    letter-spacing: 0.02em;
+}
+
+#menubox > nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+#mainnav {
+    display: flex;
+    color: rgb(var(--color_15));
+    
+    list-style: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#mainnav > li {
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    margin-right: 30px;
+}
+
+#personal{
+    display: flex;
+    color: rgb(var(--color_15));
+    
+    list-style: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#personal > li {
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    margin-right: 30px;
+}
+
+#banner {
+    width: 100%;
+    height: 535px;
+    background-image: url("https://static.wixstatic.com/media/82fcd3_aedb20fed8cc470782a538731cb16151~mv2.jpg/v1/fill/w_1349,h_535,al_c,q_85,usm_0.66_1.00_0.01/82fcd3_aedb20fed8cc470782a538731cb16151~mv2.webp");
+}
+
+.slimside {
+    margin: 70px 120px 70px 120px;
+}
+
+.slimside2 {
+    margin: 70px 40px 70px 40px;
+}
+
+#beneficios {
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 5%; row-gap: 5%;
+    height: 230px;
+}
+
+
+#beneficios > li {
+    background-color: rgb(var(--color_12));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+}
+
+#mosaico1 {
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 21% 1fr 32%;
+    column-gap: 5%; row-gap: 5%;
+    height: 401px;
+}
+
+#mosaico1 > li {
+    background-color: rgb(var(--color_12));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+    background-clip: content-box;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#mosaico1 > li > div {
+    background-color: rgba(var(--color_23), .8);
+    width: 100%;
+    height: 100%;
+}
+
+#mosaico1 > li:nth-child(1){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_8d5625845a1d4676b50d97368cf8050e~mv2_d_1735_2000_s_2.jpg/v1/fill/w_240,h_401,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_8d5625845a1d4676b50d97368cf8050e~mv2_d_1735_2000_s_2.webp");
+}
+
+
+#mosaico1 > li:nth-child(2){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_8e5daf6e362d432f9f34ff70780c6752~mv2_d_5509_4000_s_4_2.jpg/v1/fill/w_415,h_401,al_t,q_80,usm_0.66_1.00_0.01/82fcd3_8e5daf6e362d432f9f34ff70780c6752~mv2_d_5509_4000_s_4_2.webp");
+}
+
+#mosaico1 > li:nth-child(3){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_97259c1aab9e4a9d9d9a6d33896ba1ec~mv2_d_3745_2492_s_4_2.jpg/v1/fill/w_357,h_401,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_97259c1aab9e4a9d9d9a6d33896ba1ec~mv2_d_3745_2492_s_4_2.webp");
+}
+
+
+#mosaico2 {
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 32% 1fr;
+    column-gap: 5%; row-gap: 5%;
+    height: 420px;
+}
+
+#mosaico2 > li {
+    background-color: rgb(var(--color_12));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+}
+
+#mosaico2 > li:nth-child(1){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_2832171e379d4408bd00c5e72c89eff7~mv2_d_2000_1424_s_2.jpg/v1/fill/w_358,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_2832171e379d4408bd00c5e72c89eff7~mv2_d_2000_1424_s_2.webp");
+}
+
+
+#mosaico2 > li:nth-child(2){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_6d3863ca538744b0b97b69aeecef5137~mv2_d_5800_3800_s_4_2.jpg/v1/fill/w_699,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_6d3863ca538744b0b97b69aeecef5137~mv2_d_5800_3800_s_4_2.webp");
+}
+
+#mosaico3 {
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 1fr 32%;
+    column-gap: 5%; row-gap: 5%;
+    height: 420px;
+}
+
+#mosaico3 > li {
+    background-color: rgb(var(--color_12));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+}
+
+#mosaico3 > li:nth-child(1){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_65895508ea904ecb85468599bf550e60~mv2_d_6741_2683_s_4_2.jpg/v1/fill/w_699,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_65895508ea904ecb85468599bf550e60~mv2_d_6741_2683_s_4_2.webp");
+}
+
+
+#mosaico3 > li:nth-child(2){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_b0859172cf504ad3b7dfcdad97f6e9a3~mv2_d_4256_2832_s_4_2.jpg/v1/fill/w_360,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_b0859172cf504ad3b7dfcdad97f6e9a3~mv2_d_4256_2832_s_4_2.webp");
+}
+
+span#hr {
+    display: block;
+    min-height: 10px;
+    border-bottom: 1.5px solid rgb(var(--color_13));
+}
+
+.sectiontitle {
+    color: rgb(var(--color_18));
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    vertical-align: baseline;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    font-size: 40px;
+    font: var(--font_3);
+    margin-bottom: 55px;
+}
+#previaloja{
+    text-align: center;
+}
+#previaloja > ul {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 3%; row-gap: 3%;
+    height: 380px;
+}
+
+#previaloja li {
+    background-color: rgb(var(--color_12));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+}
+
+#previaloja > li:nth-child(1){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_65895508ea904ecb85468599bf550e60~mv2_d_6741_2683_s_4_2.jpg/v1/fill/w_699,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_65895508ea904ecb85468599bf550e60~mv2_d_6741_2683_s_4_2.webp");
+}
+
+
+#previaloja > li:nth-child(2){
+    background-image: url("https://static.wixstatic.com/media/82fcd3_b0859172cf504ad3b7dfcdad97f6e9a3~mv2_d_4256_2832_s_4_2.jpg/v1/fill/w_360,h_420,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_b0859172cf504ad3b7dfcdad97f6e9a3~mv2_d_4256_2832_s_4_2.webp");
+}
+
+#parcerias {
+    background-color: rgb(var(--color_12));
+    display: block;
+    height: fit-content;
+}
+
+#parcerias > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align:center;
+    height: 198px;
+}
+
+#parcerias > ul {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    list-style: none;
+    display: grid;
+    justify-content: stretch;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 3%; row-gap: 3%;
+    height: 246px;
+}
+
+#parcerias li {
+    background-color: rgb(var(--color_13));
+    font: var(--fnt,var(--font_1));
+    line-height: 45px;
+    width: 1fr;
+    height: 1fr;
+}
+
+footer{
+    height: fit-content;
+}
+
+footer > section {
+    background-color: rgb(var(--color_18));
+    height: 418px;
+}
+
+footer > div {
+    height: 175px;
 }
